# text-image-field-shortcut-backend

./: .gitignore  API_PROTOCOL.md  DEPLOYMENT_PRACTICES.md  DockerFile  Dockerfile  README.md  docker-compose.yaml  gunicorn.py  main.py  oss_upload_demo.py  pyproject.toml
api/: __init__.py  app.py  parsers.py  request_logging.py  responses.py
api/auth/: __init__.py  access_token.py  base_signature.py
api/routes/: __init__.py  health.py  image.py  understanding.py
config/: providers.json
services/: __init__.py  gemini_service.py  image_pipeline.py  kocotree_skills_auth.py  maibao_service.py  model_registry.py  openai_image_service.py  oss_service.py  request_auth.py  request_parser.py  response_extractor.py  response_normalizer.py  settings.py  understand_pipeline.py
services/domain/: __init__.py  errors.py  provider.py  requests.py
services/http/: __init__.py  asset_fetcher.py  client_factory.py
services/kocotree_skills_auth/: auth_verify.py
services/notifications/: __init__.py  feishu.py  routing_events.py
services/pipelines/: __init__.py  image.py  understanding.py
services/providers/: __init__.py  easyrouter.py  factory.py  openrouter.py
services/routing/: __init__.py  circuit_breaker.py  failover.py
services/state/: __init__.py  base.py  memory_store.py  redis_store.py
tests/: test_api_routes.py  test_circuit_breaker.py  test_failover_router.py  test_feishu_alerts.py  test_gemini_model_routing.py  test_httpx_migration.py  test_log_redaction.py  test_memory_state_store.py  test_oss_logging.py  test_provider_adapters.py
