[project]
name = "text-image-field-shortcut-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alibabacloud-oss-v2>=1.2.5",
    "cryptography>=45.0.7",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "redis>=6.4.0",
]
